--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>linling-core</module>
+        <module>linling-app</module>
     </modules>
     <!-- spring boot 父项目 -->
     <parent>
@@ -87,27 +88,6 @@
 
     <build>
         <plugins>
-            <!-- spring -->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <!-- 编译lombok -->
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
             <!-- 打包同时打包源码 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
