优化了管理后台

--- a/linling-core/src/main/resources/application.yaml
+++ b/linling-core/src/main/resources/application.yaml
@@ -1,38 +1,3 @@
-server:
-  port: 80
-
 spring:
-  # 数据库源地址
-  datasource:
-    username: root
-    password: root
-    url: jdbc:mysql://127.0.0.1:3306/cn_hll520_love?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    # druid 连接池
-    druid:
-      max-active: 30 # 最大连接数
-      min-idle: 5    # 最小连接量
-      max-wait: 10000 # 最大等待时间 10s
-      validation-query: SELECT 'linling' # 8小时空闲查询一次避免连接关闭
-      time-between-eviction-runs-millis: 60000 # 空闲连接检查间隔
-      min-evictable-idle-time-millis: 300000  # 空闲阈值
-  # mvc
-  mvc:
-    static-path-pattern: /** # 静态资源前缀 默认/** 表示没有
-
-# Mybatis
-mybatis:
-  mapper-locations: classpath*:mapper/*Mapper.xml  # 扫描地址  classpath* 表示所有模块的资源目录
-
-# linling
-linling:
-  core:
-    app:
-      app-version: 0.0.1-SNAPSHOT
-      app-description: LinLing Core is a SpringBoot framework that have many modules and complete SQL monitor and API document
-      app-info-host: /app
-    swagger:
-      enable: true  # 启用swagger
-    sql:
-      username: admin
-      password: admin123
+  profiles:
+    active: test # 使用 文件
