--- a/linling-core/pom.xml
+++ b/linling-core/pom.xml
@@ -30,11 +30,11 @@
             <artifactId>springfox-boot-starter</artifactId>
             <version>3.0.0</version>
         </dependency>
-        <!--        &lt;!&ndash; shiro &ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.apache.shiro</groupId>-->
-        <!--            <artifactId>shiro-spring</artifactId>-->
-        <!--            <version>1.3.2</version>-->
-        <!--        </dependency>-->
+        <!-- shiro -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 </project>
