--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,17 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <!-- 自动管理配置 -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>cn.hll520.linling</groupId>
+                <artifactId>linling-core</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <!-- 依赖 -->
     <dependencies>
         <!-- spring boot web -->
