--- a/linling-core/src/main/resources/application-test.yaml
+++ b/linling-core/src/main/resources/application-test.yaml
@@ -27,16 +27,23 @@ mybatis:
 
 # linling
 linling:
+  host:
+    app-api-host: /api
+    app-s-q-l-manage-host: /sql
+    app-default-login-host: /login
+    app-core-manage-host: /manage
+    app-info-host: /info
+    app-login-host: /login
   core:
     # app info
     app:
       app-version: 应用版本
       app-description: 应用说明\n 例如：这是LinlingCore的测试配置模板文件，包含了所有可以自定义设置的选项
-      app-info-host: /linling/core
-      app-api-host: /swagger-ui/index.html  # api 页面地址
-      app-s-q-l-manage-host: /druid/login.html # 监管中心地址
-      app-core-manage-host: /linling/manage # 管理后台
-      app-login-host: /linling/login # 登录页面
+      #      app-info-host: /linling/core
+      #      app-api-host: /swagger-ui/index.html  # api 页面地址
+      #      app-s-q-l-manage-host: /druid/login.html # 监管中心地址
+      #      app-core-manage-host: /linling/manage # 管理后台
+      #      app-login-host: /linling/login # 登录页面
       # 作者信息
       app-author:
         name: lengpucheng
@@ -89,18 +96,18 @@ linling:
           url: http://so.com
           target: _bank
         - name: API
-          url: /swagger-ui/index.html
+          url: /api
         - name: SQL监管
-          url: /druid/login.html
+          url: /sql
       # 左侧导航
       menu:
         # 一个组
         - name: linling
           menus:
             - name: Core
-              url: /linling/core
+              url: /info
             - name: Manage
-              url: /linling/manage
+              url: /manage
         - name: video
           menus:
             - name: BILIBILI
@@ -110,7 +117,7 @@ linling:
         - name: Linling-core
           menus:
             - name: API文档
-              url: /swagger-ui/index.html
+              url: /api
               target: _bank
             - name: SQL监管
               url: /druid/login.html
